--- a/README
+++ b/README
@@ -7,8 +7,8 @@ Package xde-theme-penguins-1.1 was released under CCPL:cc-by-nc-nd-3.0
 license 2013-12-23.
 
 This is a theme and a set of backgrounds for the XDE (X Desktop
-Environment) which provides a set of backgrounds on a Airforce theme.
-This theme uses the Squared-green style from the xde-styles package.
+Environment) which provides a set of backgrounds on a Penguin theme.
+This theme uses the Squared-blue style from the xde-styles package.
 
 Release
 -------
