--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,3 @@
-xde-theme-penguins -- authors file.  2013-12-23
+xde-theme-penguins -- authors file.  2014-09-12
 
-# vim: set ft=asciidoc tw=72 nocin nosi fo+=tcqlorn:
+Author: Brian Bidulock <bidulock@openss7.org>
