--- a/NEWS
+++ b/NEWS
@@ -1,10 +1,22 @@
-Major changes for release 1.1:
-------------------------------
+xde-theme-penguins -- history of user-visible changes.  2014-09-12
 
-Added CTWM, VTWM and TWM support.
+Release xde-theme-penguins-1.1.4 released 2014-09-12
+----------------------------------------------------
 
-Major changes for release 1.0:
-------------------------------
+git shortlog -e -n -w80,6,8 1.1...HEAD
 
-Initial release of this package.
+Brian Bidulock <bidulock@openss7.org> (4):
+      updated description
+      added waimea support
+      add themerc file
+      added adwm style
+
+
+Release xde-theme-penguins-1.1 released 2013-12-23
+--------------------------------------------------
+
+git shortlog -e -n -w80,6,8 1.1
+
+Brian Bidulock <bidulock@openss7.org> (1):
+      initial commit
 
