--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,34 @@
 # created with git log --stat=76 -M -C -500|fmt -sct -w80
 
+commit f7f47df16cf021480062cee5dfff1e1ec47cadb6
+Author: Brian Bidulock <bidulock@openss7.org>
+Date:   Wed Dec 8 02:00:46 2021 -0700
+
+    update build for gh-pages
+
+ .gitignore                         |  45 +++++++++---
+ AUTHORS                            |   4 +-
+ ChangeLog                          |  69 ++++++++++++++++++
+ Makefile.am                        |  86 ++++++++++++++++++++++-
+ NEWS                               |  24 +++++--
+ README                             | 124 ++++++++++++++++++++++-----------
+ README.md                          | 107 ++++++++++++++++++++++++++++
+ README.md.in                       | 107 ++++++++++++++++++++++++++++
+ RELEASE                            |  19 +++++
+ RELEASE.md                         |  19 +++++
+ TODO                               |  10 +++
+ _config.yml                        |   4 ++
+ autogen.sh                         |  49 +++++++++----
+ configure.template => configure.ac |  64 +++++++++++++++--
+ configure.sh                       |  42 +++++++++++
+ configure.template                 |  62 ++++++++++++++++-
+ dist.sh                            |   9 +++
+ gennews.sh                         |  50 +++++++++++++
+ index.md                           | 110 +++++++++++++++++++++++++++++
+ logo.svg                           |  91 ++++++++++++++++++++++++
+ rebuild.sh                         |  11 +++
+ 21 files changed, 1029 insertions(+), 77 deletions(-)
+
 commit b83ae4730968579f31938501335d4b85107cf2f5
 Author: Brian Bidulock <bidulock@openss7.org>
 Date:   Fri Sep 12 15:39:25 2014 -0600
